# aeson-possible

./: CHANGELOG.md  LICENSE  README.md  aeson-possible.cabal
.github/workflows/: ci-haskell.yml
src/Data/Aeson/: Possible.hs
test/: Main.hs
