cabal-version:      3.0
name:               aeson-possible
version:            0.1.0.0
synopsis:           Possible values for aeson
-- description:
homepage:           https://github.com/jonathanjouty/aeson-possible
license:            BSD-3-Clause
license-file:       LICENSE
author:             Jonathan Jouty
maintainer:         me@jonathanjouty.com
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite aeson-possible-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.0,
        aeson-possible
